examples/sample-product-chart/chart-test/fixtures/ingress-controllers/nginx-default-backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-default-backend
  namespace: ingress-nginx
  labels:
    app: custom-default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-default-backend
  template:
    metadata:
      labels:
        app: custom-default-backend
    spec:
      containers:
        - name: default-backend
          image: public.ecr.aws/nginx/nginx:1.29-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: custom-default-backend-config
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: custom-default-backend-config
  namespace: ingress-nginx
data:
  default.conf: |
    server {
      listen 80 default_server;
      server_name _;
      location / {
        return 200 'chart-test-swarm-default-backend';
        add_header Content-Type text/plain;
      }
    }
---
apiVersion: v1
kind: Service
metadata:
  name: custom-default-backend
  namespace: ingress-nginx
spec:
  selector:
    app: custom-default-backend
  ports:
    - port: 80
      targetPort: 80
