examples/sample-product-chart/chart-test/fixtures/ingress-controllers/nginx-tls-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-tls
  namespace: sample
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sample.test.local
      secretName: sample-tls
  rules:
    - host: sample.test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 80
