examples/sample-product-chart/chart-test/fixtures/ingress-controllers/traefik-basic-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sample-basic
  namespace: sample
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sample.test.local`)
      kind: Rule
      services:
        - name: sample
          port: 80
